[tool.poetry]
name = "utlog"
version = "0.1.0"
description = "UT1C logging config"
authors = ["lightmanLP <liteman1000@gmail.com>", "mikk357 <mikk357@yandex.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UT1C/utlog"
repository = "https://github.com/UT1C/utlog"
keywords = ["logging", "loguru", "UT1C"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
